--- a/.github/workflows/nuget-pack.yaml
+++ b/.github/workflows/nuget-pack.yaml
@@ -26,17 +26,15 @@ jobs:
     - name: Notify Google Chat - Success
       if: steps.nuget_pack.outcome == 'success'
       run: |
-        curl -X POST -H "Content-Type: application/json" \
-        -d "{\"text\":\"✅ NuGet Pack Success: DAL.nupkg created.\"}" \
-        ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
+  $body = @{ text = "✅ NuGet Pack Success: DAL.nupkg created." } | ConvertTo-Json
+  Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
 
     - name: Notify Google Chat - Failure
       if: steps.nuget_pack.outcome == 'failure'
       run: |
-        curl -X POST -H "Content-Type: application/json" \
-        -d "{\"text\":\"❌ NuGet Pack Failed!\"}" \
-        ${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}
-
+  $body = @{ text = "❌ NuGet Pack Failed!\: DAL.nupkg created." } | ConvertTo-Json
+  Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
+     
     - name: Upload to Google Drive
       if: steps.nuget_pack.outcome == 'success'
       uses: google-github-actions/upload-cloud-storage@v1
