--- a/.github/workflows/nuget-pack.yaml
+++ b/.github/workflows/nuget-pack.yaml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Build Project (.NET Framework 4.8.1)
       run: |
-        "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" DAL.csproj /p:Configuration=Release
+        "C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Current\Bin\MSBuild.exe" DAL.csproj /p:Configuration=Release
 
     - name: Run nuget spec
       run: nuget spec DAL.csproj
