--- a/.github/workflows/nuget-pack.yaml
+++ b/.github/workflows/nuget-pack.yaml
@@ -17,9 +17,10 @@ jobs:
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v2
 
-    - name: Run nuget spec
+    - name: Build DAL Project
       shell: pwsh
-      run: nuget spec DAL.csproj
+      run: |
+        msbuild DAL.csproj /p:Configuration=Release
 
     - name: Run nuget pack
       id: nuget_pack
@@ -27,6 +28,7 @@ jobs:
       run: |
         nuget pack DAL.csproj -OutputDirectory ./nupkgs 2>&1 | Tee-Object -FilePath nuget_pack.log
         if ($LASTEXITCODE -ne 0) { exit 1 }
+
 
     - name: Notify Google Chat - Success
       if: steps.nuget_pack.outcome == 'success'
