--- a/.github/workflows/nuget-pack.yaml
+++ b/.github/workflows/nuget-pack.yaml
@@ -17,18 +17,6 @@ jobs:
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v2
     
-    - name: Run nuget pack
-      id: nuget_pack
-      shell: pwsh
-      run: |
-        nuget pack DAL.csproj -OutputDirectory ./nupkgs 2>&1 | Tee-Object -FilePath nuget_pack.log
-        if ($LASTEXITCODE -ne 0) { exit 1 }
-
-    - name: Build DAL Project
-      shell: pwsh
-      run: |
-        msbuild DAL.csproj /p:Configuration=Release
-
     - name: Notify Google Chat - Success
       if: steps.nuget_pack.outcome == 'success'
       shell: pwsh
@@ -40,11 +28,7 @@ jobs:
       if: steps.nuget_pack.outcome == 'failure'
       shell: pwsh
       run: |
-        $errorLog = Get-Content nuget_pack.log -Raw
-        if ($errorLog.Length -gt 3500) {
-          $errorLog = $errorLog.Substring(0, 3500) + "`n... (truncated)"
-        }
-        $body = @{ text = "❌ DAL.nupkg Creation Failed!\n```\n$errorLog\n```" } | ConvertTo-Json -Depth 10
+        $body = @{ text = "❌ DAL.nupkg Creation Failed!" } | ConvertTo-Json -Depth 10
         Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
 
 
