--- a/.github/workflows/nuget-pack.yaml
+++ b/.github/workflows/nuget-pack.yaml
@@ -16,17 +16,22 @@ jobs:
 
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v2
+
+    - name: Run nuget pack
+      id: nuget_pack
+      run: |
+        nuget spec DAL.csproj
+        nuget pack DAL.csproj -OutputDirectory ./nupkgs
+      continue-on-error: true
     
     - name: Notify Google Chat - Success
       if: steps.nuget_pack.outcome == 'success'
-      shell: pwsh
       run: |
         $body = @{ text = "✅ NuGet Pack Success: DAL.nupkg created." } | ConvertTo-Json -Depth 10
         Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
 
     - name: Notify Google Chat - Failure
       if: steps.nuget_pack.outcome == 'failure'
-      shell: pwsh
       run: |
         $body = @{ text = "❌ DAL.nupkg Creation Failed!" } | ConvertTo-Json -Depth 10
         Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
