--- a/.github/workflows/nuget-pack.yaml
+++ b/.github/workflows/nuget-pack.yaml
@@ -31,7 +31,7 @@ jobs:
           vs-version: 'latest'
 
       - name: Restore NuGet packages
-        run: nuget restore DAL.csproj
+        run: nuget restore DAL/DAL.csproj
 
       - name: Build the Project
         run: msbuild DAL.csproj /p:Configuration=Release
