--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,55 +7,56 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-upload:
+  build-pack-push:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Checkout Code
       uses: actions/checkout@v4
 
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v2
 
     - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
+      uses: microsoft/setup-msbuild@v2
+    
+    - name: Navigate to Workspace
+      run: cd $GITHUB_WORKSPACE
 
-    - name: Restore NuGet packages
-      id: Restore_nuget_pack
-      run: nuget restore DAL.sln
-      continue-on-error: true
+    - name: Create Build Directory
+      run: mkdir _build
 
-    - name: Notify Google Chat - Restore Failure
-      if: steps.Restore_nuget_pack.outcome == 'failure'
+    - name: Calculate Version (Auto Increment)
+      id: versioning
       run: |
-        $body = @{ text = "❌ Restore NuGet packages Failed!" } | ConvertTo-Json -Depth 10
-        Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
+        $lastTag = git describe --tags --abbrev=0
+        Write-Output "Last Tag: $lastTag"
 
-    - name: Build Solution (Release)
+        $versionParts = $lastTag.TrimStart('v').Split('.')
+        $major = [int]$versionParts[0]
+        $minor = [int]$versionParts[1]
+        $patch = [int]$versionParts[2] + 1
+
+        $newVersion = "$major.$minor.$patch"
+        Write-Output "New Version: $newVersion"
+
+        echo "nuget_version=$newVersion" >> $env:GITHUB_ENV
+
+    - name: Restore NuGet Packages
+      run: nuget restore DAL.sln
+
+    - name: Build Solution
       run: msbuild DAL.sln /p:Configuration=Release /p:Platform="Any CPU"
 
-    - name: Run nuget pack
-      id: nuget_pack
+    - name: Pack NuGet Package
       run: |
-        nuget pack DAL.csproj -OutputDirectory ./nupkgs -Properties Configuration=Release
-      continue-on-error: true
+        nuget pack DAL.csproj `
+          -OutputDirectory ./nupkgs `
+          -Properties Configuration=Release `
+          -Version $env:nuget_version
 
-    - name: Notify Google Chat - Pack Success
-      if: steps.nuget_pack.outcome == 'success'
-      run: |
-        $body = @{ text = "✅ NuGet Pack Success: DAL.nupkg created." } | ConvertTo-Json -Depth 10
-        Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
-
-    - name: Notify Google Chat - Pack Failure
-      if: steps.nuget_pack.outcome == 'failure'
-      run: |
-        $body = @{ text = "❌ DAL.nupkg Creation Failed!" } | ConvertTo-Json -Depth 10
-        Invoke-RestMethod -Uri "${{ secrets.GOOGLE_CHAT_WEBHOOK_URL }}" -Method Post -ContentType 'application/json' -Body $body
-
-    - name: Upload to Google Drive
-      if: steps.nuget_pack.outcome == 'success'
-      uses: google-github-actions/upload-cloud-storage@v1
+    - name: Upload NuGet Package Artifact
+      uses: actions/upload-artifact@v4
       with:
-        credentials_json: ${{ secrets.GDRIVE_SERVICE_ACCOUNT_JSON }}
+        name: NuGetPackage
         path: ./nupkgs/*.nupkg
-        destination: drive://1jN23YIU6aclDiZhFZliCLxzdW76-39fo/
